PLT-6200 Fixed file upload button not working on iOS

--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -33,14 +33,9 @@
         .msg-typing {
             display: none;
         }
-    }
 
-    .post-create__container{
-        .post-create-body {
-            .icon__postcontent_picker {
-                display:none;
-                top: -7px;
-            }
+        .icon--emoji-picker {
+            display: none;
         }
     }
 
